--- a/NapoleonTriumph/Base.lproj/Main.storyboard
+++ b/NapoleonTriumph/Base.lproj/Main.storyboard
@@ -12,15 +12,77 @@
                         <viewControllerLayoutGuide type="top" id="8aa-yV-Osq"/>
                         <viewControllerLayoutGuide type="bottom" id="qHh-Mt-9TT"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="3se-qz-xqx" customClass="SKView">
+                    <view key="view" contentMode="scaleToFill" id="3se-qz-xqx">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hX6-yv-HOK">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LJg-tu-uo2" customClass="SKView">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="LJg-tu-uo2" firstAttribute="leading" secondItem="hX6-yv-HOK" secondAttribute="leading" id="6gd-it-4CG"/>
+                                    <constraint firstItem="LJg-tu-uo2" firstAttribute="leading" secondItem="hX6-yv-HOK" secondAttribute="leading" id="HBd-Tz-XAc"/>
+                                    <constraint firstItem="LJg-tu-uo2" firstAttribute="leading" secondItem="hX6-yv-HOK" secondAttribute="leading" id="IGe-AA-3K8"/>
+                                    <constraint firstAttribute="bottom" secondItem="LJg-tu-uo2" secondAttribute="bottom" id="Lt1-qX-g2J"/>
+                                    <constraint firstItem="LJg-tu-uo2" firstAttribute="centerX" secondItem="hX6-yv-HOK" secondAttribute="centerX" id="NUq-3T-gCs"/>
+                                    <constraint firstItem="LJg-tu-uo2" firstAttribute="centerX" secondItem="hX6-yv-HOK" secondAttribute="centerX" id="QNS-Ri-AA0"/>
+                                    <constraint firstItem="LJg-tu-uo2" firstAttribute="top" secondItem="hX6-yv-HOK" secondAttribute="top" id="VPs-QZ-l0y"/>
+                                    <constraint firstItem="LJg-tu-uo2" firstAttribute="top" secondItem="hX6-yv-HOK" secondAttribute="top" id="VrZ-VA-fES"/>
+                                    <constraint firstAttribute="trailing" secondItem="LJg-tu-uo2" secondAttribute="trailing" id="VyG-8W-zV9"/>
+                                    <constraint firstItem="LJg-tu-uo2" firstAttribute="top" secondItem="hX6-yv-HOK" secondAttribute="top" id="fFt-g9-AHb"/>
+                                    <constraint firstAttribute="bottom" secondItem="LJg-tu-uo2" secondAttribute="bottom" id="g90-7q-NbX"/>
+                                    <constraint firstItem="LJg-tu-uo2" firstAttribute="centerY" secondItem="hX6-yv-HOK" secondAttribute="centerY" id="gpr-yg-aC3"/>
+                                    <constraint firstAttribute="trailing" secondItem="LJg-tu-uo2" secondAttribute="trailing" id="qep-1F-OjL"/>
+                                    <constraint firstItem="LJg-tu-uo2" firstAttribute="centerY" secondItem="hX6-yv-HOK" secondAttribute="centerY" id="vVF-j2-1Zj"/>
+                                    <constraint firstAttribute="trailing" secondItem="LJg-tu-uo2" secondAttribute="trailing" id="z5i-gS-spu"/>
+                                    <constraint firstAttribute="bottom" secondItem="LJg-tu-uo2" secondAttribute="bottom" id="z7n-i4-2ka"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="6gd-it-4CG"/>
+                                        <exclude reference="HBd-Tz-XAc"/>
+                                        <exclude reference="Lt1-qX-g2J"/>
+                                        <exclude reference="QNS-Ri-AA0"/>
+                                        <exclude reference="VPs-QZ-l0y"/>
+                                        <exclude reference="VyG-8W-zV9"/>
+                                        <exclude reference="fFt-g9-AHb"/>
+                                        <exclude reference="g90-7q-NbX"/>
+                                        <exclude reference="gpr-yg-aC3"/>
+                                        <exclude reference="qep-1F-OjL"/>
+                                    </mask>
+                                </variation>
+                            </scrollView>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hX6-yv-HOK" firstAttribute="leading" secondItem="3se-qz-xqx" secondAttribute="leading" id="6yq-Rd-6nD"/>
+                            <constraint firstItem="hX6-yv-HOK" firstAttribute="top" secondItem="3se-qz-xqx" secondAttribute="top" id="887-SH-FjI"/>
+                            <constraint firstAttribute="trailing" secondItem="hX6-yv-HOK" secondAttribute="trailing" id="FaB-rv-Kan"/>
+                            <constraint firstAttribute="trailing" secondItem="hX6-yv-HOK" secondAttribute="trailing" id="J2o-gG-gFg"/>
+                            <constraint firstItem="hX6-yv-HOK" firstAttribute="top" secondItem="3se-qz-xqx" secondAttribute="top" id="MXO-hM-cwq"/>
+                            <constraint firstItem="hX6-yv-HOK" firstAttribute="leading" secondItem="3se-qz-xqx" secondAttribute="leading" id="m9Q-gf-iAM"/>
+                            <constraint firstItem="qHh-Mt-9TT" firstAttribute="top" secondItem="hX6-yv-HOK" secondAttribute="bottom" id="oqm-f4-HbJ"/>
+                            <constraint firstItem="hX6-yv-HOK" firstAttribute="bottom" secondItem="qHh-Mt-9TT" secondAttribute="top" id="uSK-lU-QCN"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="6yq-Rd-6nD"/>
+                                <exclude reference="887-SH-FjI"/>
+                                <exclude reference="FaB-rv-Kan"/>
+                                <exclude reference="uSK-lU-QCN"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
-                        <outlet property="draggedView" destination="3se-qz-xqx" id="urV-7I-fSg"/>
-                        <outlet property="scalingView" destination="3se-qz-xqx" id="kc1-qa-PQ9"/>
+                        <outlet property="draggedView" destination="LJg-tu-uo2" id="5jD-Sn-kGc"/>
+                        <outlet property="scalingView" destination="LJg-tu-uo2" id="FEs-Pm-cOW"/>
+                        <outlet property="scrollview" destination="hX6-yv-HOK" id="hKe-EP-gTt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
@@ -46,7 +108,7 @@
                                             <rect key="frame" x="15" y="0.0" width="550" height="43"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
